@startuml
class com.acl.listeners.KeyboardListener {
- Vector2 motion
+ Vector2 getMotion()
+ boolean keyDown(int)
+ boolean keyUp(int)
+ boolean keyTyped(char)
+ boolean touchDown(int,int,int,int)
+ boolean touchUp(int,int,int,int)
+ boolean touchDragged(int,int,int)
+ boolean mouseMoved(int,int)
+ boolean scrolled(float,float)
}
class com.acl.screens.MenuScreen {
+ void show()
+ void render(float)
}
class com.acl.screens.GameScreen {
+ void show()
+ void render(float)
+ void dispose()
}
class com.acl.datas.elements.Player {
- PolygonShape shape
+ void configureBodyDef()
+ void setFixture()
+ void setMotion(Vector2)
}
class com.acl.managers.FloorManager {
- char[][] table
- int width
- int height
+ void createLevel()
+ void saveLevel()
+ char[][] getTable()
+ int getWidth()
+ int getHeight()
}
class com.acl.ObstACLTower {
+ void create()
+ void dispose()
+ Tower getTower()
+ void setTower(Tower)
}
abstract class com.acl.datas.elements.Element {
- Vector2 position
- Body body
- BodyDef bodyDef
- float height
- float width
+ {abstract}void configureBodyDef()
+ {abstract}void setFixture()
+ void createBody(World)
+ float getHeight()
+ void setHeight(float)
+ float getWidth()
+ void setWidth(float)
+ Vector2 getPosition()
+ void setPosition(Vector2)
+ Body getBody()
+ void setBody(Body)
+ BodyDef getBodyDef()
+ void setBodyDef(BodyDef)
}
class com.acl.Tower {
- World world
- float height
- void createTower()
+ Player getPlayer()
+ World getWorld()
- void createElement(char,int,int)
- void addElement(Element)
- float getHeight()
}
class com.acl.datas.elements.Wall {
- PolygonShape shape
- float density
- float restitution
- float friction
+ void configureBodyDef()
+ void setFixture()
}

com.acl.Tower -- "*" com.acl.datas.elements.Element
com.acl.Tower -- "1" com.acl.datas.elements.Player
com.acl.screens.GameScreen -- "1" com.acl.ObstACLTower
com.acl.screens.GameScreen -- "1" com.acl.listeners.KeyboardListener
com.acl.ObstACLTower -- "1" com.acl.Tower
com.badlogic.gdx.InputProcessor <|.. com.acl.listeners.KeyboardListener
com.badlogic.gdx.ScreenAdapter <|-- com.acl.screens.MenuScreen
com.badlogic.gdx.ScreenAdapter <|-- com.acl.screens.GameScreen
com.acl.datas.elements.Element <|-- com.acl.datas.elements.Player
com.badlogic.gdx.Game <|-- com.acl.ObstACLTower
com.acl.datas.elements.Element <|-- com.acl.datas.elements.Wall
@enduml